--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,15 +13,13 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
+    Pau\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller'
-        tags: ['controller.service_arguments']
 
+    Pau\Reports\Infrastructure\Report\Parser\Xml\XmlReportParser: ~
+    Pau\Reports\Infrastructure\Report\Parser\Csv\CsvReportParser: ~
+    Pau\Reports\Application\Report\Query\FindSuspicious\FindSuspicious: '@Pau\Reports\Domain\Model\Report\ReportParser'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
