--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-
+.idea
+.idea/
 ###> symfony/phpunit-bridge ###
 .phpunit
 .phpunit.result.cache
